getting-started/assets/pach-dash.yaml
apiVersion: v1
kind: Service
metadata:
  name: pach-dash
spec:
  selector:
    app: dash
  ports:
      - protocol: TCP
        port: 80
        targetPort: 30080
  type: LoadBalancer
