getting-started/assets/traefik-ingress-minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pachyderm
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: host01
    http:
      paths:
      - path: /
        backend:
          serviceName: dash
          servicePort: dash-http
      - path: /ws
        backend:
          serviceName: dash
          servicePort: grpc-proxy-http
